--- a/index.html
+++ b/index.html
@@ -144,24 +144,24 @@
   <script>
     // Gift arrays
     const goodGifts = [
-      'New Smartphone',
-      'High-End Laptop',
-      'Smartwatch',
-      'Tablet',
-      'Gaming Console',
-      '4K TV',
-      'Noise Cancelling Headphones',
+      'Beer Can',
+      'Surprise Gift',
+      'Surprise Gift',
+      'Surprise Gift',
+      'Surprise Gift',
+      'Surprise Gift',
+      'Surprise Gift',
       'VR Headset',
-      'Smart Speaker',
-      'Drone'
+      'Surprise Gift',
+      'Surprise Gift'
     ];
 
     const funnyGifts = [
-      'Silly Socks',
-      'Funny Mug',
-      'Novelty T-Shirt',
-      'Quirky Keychain',
-      'Humorous Calendar',
+      'Maggi Packet',
+      'Bourbon Biscuits',
+      'Parle G',
+      'Patanjali Biscuits',
+      'Priya Gold Biscuits',
       'Joke Book',
       'Funky Hat',
       'Crazy Tie',
