--- a/index.html
+++ b/index.html
@@ -151,27 +151,22 @@
       'Surprise Gift',
       'Surprise Gift',
       'Surprise Gift',
-      'VR Headset',
       'Surprise Gift',
-      'Surprise Gift'
+      'Surprise Gift',
+      '5 Star'
     ];
 
     const funnyGifts = [
-      'Maggi Packet',
-      'Bourbon Biscuits',
+      'Maggi',
+      'Bourbon',
       'Parle G',
-      'Patanjali Biscuits',
-      'Priya Gold Biscuits',
-      'Joke Book',
-      'Funky Hat',
-      'Crazy Tie',
-      'Gag Gift Certificate',
-      'Fake Lottery Ticket',
-      'Comical Poster',
-      'Bizarre Gadget',
-      'Wacky Phone Case',
-      'Oddball Pen',
-      'Ridiculous Mug'
+      'Patanjali',
+      'Krack Jack',
+      'Tooth Brush',
+      'Appy Fizz',
+      'Exo',
+      'Monaco',
+      'Real Juice'
     ];
 
     // Helper function to get random item from array
